Removed bootstrap menu

--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -157,3 +157,8 @@ label .button-label{
     position:relative;
     top:1px;
 }
+
+.navBardemoBasicUsage md-content .ext-content {
+    padding: 50px;
+    margin: 20px;
+    background-color: #FFF2E0; }
