fixed nav issues

--- a/view/index.html
+++ b/view/index.html
@@ -13,14 +13,14 @@
 
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <link href="/lewishamchurchofchrist/css/simple-sidebar.css" rel="stylesheet">
-    <link href="/lewishamchurchofchrist/css/carousel.css" rel="stylesheet">
+    <link href="../css/simple-sidebar.css" rel="stylesheet">
+    <link href="../css/carousel.css" rel="stylesheet">
 
     <script src = "../bower_components/angular/angular.min.js"></script>
     <script src = "../bower_components/angular-route/angular-route.min.js"></script>
-    <script type="text/javascript" src="/lewishamchurchofchrist/js/app.js"></script>
-    <script type="text/javascript" src="/lewishamchurchofchrist/js/churchAppController.js"></script>
-    <script type="text/javascript" src="/lewishamchurchofchrist/js/route-provider.js"></script>
+    <script type="text/javascript" src="../js/app.js"></script>
+    <script type="text/javascript" src="../js/churchAppController.js"></script>
+    <script type="text/javascript" src="../js/route-provider.js"></script>
     <![endif]-->
 
 </head>
@@ -43,10 +43,10 @@
 
                 <!-- Left nav -->
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#home" class="home" ng-click="active='home'"><strong>Home</strong></strong></a></li>
-                    <li><a href="#about" class="about " ng-click="active='about'"><strong>About</strong></a></li>
-                    <li><a href="#ministries" class="ministries" ng-click="active='ministries'"><strong>Ministries</strong></a></li>
-                    <li><a href="#contact" class="contact" ng-click="active='contact'"><strong>Contact</strong></a></li>
+                    <li class="active"><a href="#!/home" class="home" ng-click="active='home'"><strong>Home</strong></strong></a></li>
+                    <li><a href="#!/about" class="about " ng-click="active='about'"><strong>About</strong></a></li>
+                    <li><a href="#!/ministries" class="ministries" ng-click="active='ministries'"><strong>Ministries</strong></a></li>
+                    <li><a href="#!/contact" class="contact" ng-click="active='contact'"><strong>Contact</strong></a></li>
                     <li><a href="#">Dropdown <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Action</a></li>
