changed page view path directory

--- a/view/index.html
+++ b/view/index.html
@@ -25,9 +25,9 @@
 
 </head>
 
-<body>
+<body ng-app="app" ng-controller="appController"  >
 <!-- Adding the ng-app declaration to initialize AngularJS -->
-<div id="main" ng-app="app" ng-controller="appController"  class="container-fluid">
+<div id="main" class="container-fluid">
 
     <div class="navbar navbar-default navbar-fixed-top" role="navigation" id="navBar">
             <div class="navbar-header">
@@ -88,7 +88,7 @@
 <!-- FOOTER -->
 <footer>
     <p class="pull-right"><a href="#">Back to top</a></p>
-    <p>&copy; 2016 LCOC. &reg;
+    <p>&copy; {{currentYear}} LCOC. &reg;
 </footer>
 
 <!--Scripts-->
