--- a/view/index.html
+++ b/view/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <title>Lewisham Church of christ</title>
 
@@ -21,63 +20,12 @@
     <script type="text/javascript" src="../js/app.js"></script>
     <script type="text/javascript" src="../js/churchAppController.js"></script>
     <script type="text/javascript" src="../js/route-provider.js"></script>
-    <![endif]-->
-
 </head>
 
 <body ng-app="app" ng-controller="appController"  >
-<!-- Adding the ng-app declaration to initialize AngularJS -->
 <div id="main" class="container-fluid">
 
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation" id="navBar">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#"  style="color: #ffffff"><label>Lewisham Church of christ</label></a>
-            </div>
-            <div class="navbar-collapse collapse">
-
-                <!-- Left nav -->
-                <ul class="nav navbar-nav">
-                    <li ng-class="{active: $location.path() == '/home' || $location.path() == '/'}"><a href="#!/home" class="home" ng-click="active='home'"><strong>Home</strong></strong></a></li>
-                    <li ng-class="{active: $location.path() == '/about'}"><a href="#!/about" class="about " ng-click="active='about'"><strong>About</strong></a></li>
-                    <li ng-class="{active: $location.path() == '/ministries'}"><a href="#!/ministries" class="ministries" ng-click="active='ministries'"><strong>Ministries</strong></a></li>
-                    <li ng-class="{active: $location.path() == '/contact'}"><a href="#!/contact" class="contact" ng-click="active='contact'"><strong>Contact</strong></a></li>
-                    <li><a href="#">Dropdown <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li class="divider"></li>
-                            <li class="dropdown-header">Nav header</li>
-                            <li><a href="#">Separated link</a></li>
-                            <li><a href="#">One more separated link <span class="caret"></span></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="#">Action</a></li>
-                                    <li><a href="#">Another action</a></li>
-                                    <li><a href="#">A long sub menu <span class="caret"></span></a>
-                                        <ul class="dropdown-menu">
-                                            <li><a href="#">Action</a></li>
-                                            <li><a href="#">Something else here</a></li>
-                                            <li class="disabled"><a class="disabled" href="#">Disabled item</a></li>
-                                            <li><a href="#">One more link</a></li>
-                                            <li><a href="#">Menu item 1</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="#">Another link</a></li>
-                                    <li><a href="#">One more link</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-
-            </div><!--/.nav-collapse -->
-    </div>
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation" id="navBar" ng-include="'../view/template/menu-template.html'"/></div>
     <div class="row">
         <div class="col-sm-1"></div>
         <div  id="pageLayout" class="col-sm-10" ng-view></div>
@@ -90,15 +38,11 @@
     <p class="pull-right"><a href="#">Back to top</a></p>
     <p>&copy; {{currentYear}} LCOC. &reg;
 </footer>
-
-<!--Scripts-->
-<script src="../bower_components/jquery/dist/jquery.min.js"></script>
-<script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-<!-- SmartMenus jQuery plugin -->
-<script src="../bower_components/smartmenus/dist/jquery.smartmenus.js"></script>
-<!-- SmartMenus jQuery Bootstrap Addon -->
-<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.smartmenus/1.0.0/addons/bootstrap/jquery.smartmenus.bootstrap.js"></script>
-<script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-2.1.4.js"></script>
-<script src="../bower_components/angular-animate/angular-animate.js"></script>
+    <script src="../bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="../bower_components/smartmenus/dist/jquery.smartmenus.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.smartmenus/1.0.0/addons/bootstrap/jquery.smartmenus.bootstrap.js"></script>
+    <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-2.1.4.js"></script>
+    <script src="../bower_components/angular-animate/angular-animate.js"></script>
 </body>
 </html>
