--- a/view/index.html
+++ b/view/index.html
@@ -11,29 +11,33 @@
     <meta name="author" content="">
 
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="../bower_components/angular-material/angular-material.min.css">
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link href="../css/simple-sidebar.css" rel="stylesheet">
     <link href="../css/carousel.css" rel="stylesheet">
 
-    <script src = "../bower_components/angular/angular.min.js"></script>
-    <script src = "../bower_components/angular-route/angular-route.min.js"></script>
-    <script type="text/javascript" src="../js/app.js"></script>
-    <script type="text/javascript" src="../js/churchAppController.js"></script>
-    <script type="text/javascript" src="../js/route-provider.js"></script>
+    <script src ="../bower_components/angular/angular.min.js"></script>
+    <script src ="../bower_components/angular-route/angular-route.min.js"></script>
+    <script src ="../bower_components/angular-material/angular-material.min.js"></script>
+    <script src="../bower_components/angular-animate/angular-animate.min.js"></script>
+    <script src="../bower_components/angular-aria/angular-aria.min.js"></script>
+    <script src="../js/app.js"></script>
+    <script src="../js/churchAppController.js"></script>
+    <script src="../js/route-provider.js"></script>
 </head>
-
 <body ng-app="app" ng-controller="appController"  >
-<div id="main" class="container-fluid">
-
+<div layout-sm="column" id="main" class="container-fluid">
     <div class="navbar navbar-default navbar-fixed-top" role="navigation" id="navBar" ng-include="'../view/template/menu-template.html'"/></div>
-    <div class="row">
-        <div class="col-sm-1"></div>
-        <div  id="pageLayout" class="col-sm-10" ng-view></div>
-        <div class="col-sm-1"></div>
+    <div layout="row" id="view-layout">
+        <div flex="10"></div>
+        <div flex="55" ng-view></div>
+        <div flex="5"></div>
+        <div flex="20">
+            <div flex layout="column" ng-include="'../view/template/view-left-column.html'"></div>
+        </div>
+        <div flex="10"></div>
     </div>
 </div>
-
-<!-- FOOTER -->
 <footer>
     <p class="pull-right"><a href="#">Back to top</a></p>
     <p>&copy; {{currentYear}} LCOC. &reg;
