--- a/view/home.html
+++ b/view/home.html
@@ -1,5 +1,5 @@
-<div>
-    <div class="row" style="text-align: center">
+<div flex>
+    <div style="text-align: center">
         <div>
             <div uib-carousel active="active" interval="myInterval" no-wrap="noWrapSlides">
                 <div uib-slide ng-repeat="slide in slides track by slide.id" index="slide.id">
@@ -13,8 +13,7 @@
         </div>
     </div>
 
-    <div class="row">
-
+    <div flex>
         <div>
             <div>
 
