Added icons and more enhancements

--- a/view/home.html
+++ b/view/home.html
@@ -1,46 +1,34 @@
 <div flex>
+        <div style="text-align: left">
+            <p class="normal">
+            <b>"Salvation comes through a cross and a crucified Jesus."</b>
+            </p>
+            <p class=normal>
+                We are a warm group of Christians who are striving to worship God in the same way that the first century
+                Christians did.
+                <p>
+            In this way we are striving to continue the divine unity that Jesus prayed for (John 17v 21). The church of Christ has congregations throughout the United Kingdom and all over the world. However we have no central organization on earth, but we have a common cause: to be the Church as it was when first instituted by the Lord Jesus Christ.
+
+        </p>
+        </div>
+</div>
+<div flex style="padding-top: 4%">
     <div style="text-align: center">
-        <div>
-            <div uib-carousel active="active" interval="myInterval" no-wrap="noWrapSlides">
-                <div uib-slide ng-repeat="slide in slides track by slide.id" index="slide.id">
-                    <img ng-src="{{slide.image}}" class="img-responsive" style="height: 350px; width: 1000px">
-                    <div class="carousel-caption">
-                        <h1>{{slide.title}}</h1>
-                        <p>{{slide.text}}</p>
-                    </div>
+        <div uib-carousel active="active" interval="myInterval" no-wrap="noWrapSlides">
+            <div uib-slide ng-repeat="slide in slides track by slide.id" index="slide.id">
+                <img ng-src="{{slide.image}}" class="img-responsive" style="height: 350px; width: 1000px">
+                <div class="carousel-caption">
+                    <h1>{{slide.title}}</h1>
+                    <p>{{slide.text}}</p>
                 </div>
             </div>
         </div>
     </div>
+</div>
 
-    <div flex>
-        <div>
-            <div>
+<div layout="row" style="padding-top: 4%">
 
-                <p class="normal">
-                <h4>SALVATION COMES THROUGH A CROSS AND A CRUCIFIED CHRIST.</h4>
-                </p>
-                <p class=normal class="normal">
-                    We are a warm group of Christians who are striving to worship God in the same way that the first century
-                    Christians did.
-                </p>
-                <p class="normal">
-                    In this way we are striving to continue the divine unity that Jesus prayed for in John 17:21.<br>
-                    The church of Christ has congregations throughout the United Kingdom and all over the world.<br>
-                    However we have no central organization on earth, but we have a common cause: to be the Church as
-                    it was when first instituted by the Lord Jesus Christ.
-                </p>
-                <p class="normal">
-                    More over the Bible teaches us that our practices and teachings must be by the authority of our Lord
-                    Jesus Christ.<br>
-                    Whatever you do, whether in word or in deed, do it all in the name of the Lord Jesus, giving thanks
-                    to God the Father through him (Colossians 3v17)..
-                </p>
-                <p class="normal">
-                    Psalms 1: 1 Blessed is the man who walks not in the counsel of the ungodly, Nor stands in the path of
-                    sinners, Nor sits in the seat of the scornful..
-                </p>
-            </div>
-        </div>
+    <div flex style="border-bottom: solid #4b4f49; text-align: left">
+        <h3>God's Word For The Week</h3>
     </div>
 </div>
