--- a/view/template/left-view-column.html
+++ b/view/template/left-view-column.html
@@ -1,30 +1,57 @@
 <div layout="column">
-<div flex>
-    <p>
-        <a href="#" class="worshipButton">
-            <label style="color: #101010; font-weight: 100">Looking for a christian home?</label><br>
-            <label>Worship <br> With <br> Us</label>
-        </a>
-    </p>
-    <p>
-        <a href="#" class="worshipButton">
-            <label style="color: #101010; font-weight: 100">Want to learn about the bible?</label><br>
-            <label>Learn <br> With <br> Us</label>
-        </a>
-    </p>
-    <p>
-        <a href="#" class="worshipButton">
-            <label style="color: #101010; font-weight: 100">Want to get involved with us?</label><br>
-            <label>Serve <br> With <br> Us</label>
-        </a>
-    </p>
-</div>
-<div flex>
-    <br>
-    <p><strong>We are here</strong></p>
-    <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d621.3232453415965!2d-0.028855470785451
+    <div flex>
+        <table class="table table-hover">
+            <thead class="thead-inverse">
+            <tr>
+                <td colspan="2" class="text-center"><b>Worship And class Times</b></td>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td style="text-align: left">Sunday morning class  </td>
+                <td>11:00  am</td>
+            </tr>
+            <tr>
+                <td style="text-align: left">Sunday morning worship</td>
+                <td>12:00  pm</td>
+            </tr>
+            <tr>
+                <td style="text-align: left">Sunday evening service </td>
+                <td>6:30  pm</td>
+            </tr>
+            <tr>
+                <td style="text-align: left">Thursday bible class</td>
+                <td>7:00  pm</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    <div flex>
+        <br>
+        <p><strong>We are here every sunday</strong></p>
+        <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d621.3232453415965!2d-0.028855470785451
             757!3d51.47113493411288!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4876025f3e830817%3A0x592ddcceacb
             a384!2s22+Lucas+St%2C+London+SE8+4QG!5e0!3m2!1sen!2suk!4v1473449094069"
-               width="250" height="300" frameborder="0" style="border:0" allowfullscreen></iframe></p>
+                   width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe></p>
+    </div>
+<!--<div flex>-->
+    <!--<p>-->
+        <!--<a href="#" class="worshipButton">-->
+            <!--<label style="color: #101010; font-weight: 100">Looking for a christian home?</label><br>-->
+            <!--<label>Worship <br> With <br> Us</label>-->
+        <!--</a>-->
+    <!--</p>-->
+    <!--<p>-->
+        <!--<a href="#" class="worshipButton">-->
+            <!--<label style="color: #101010; font-weight: 100">Want to learn about the bible?</label><br>-->
+            <!--<label>Learn <br> With <br> Us</label>-->
+        <!--</a>-->
+    <!--</p>-->
+    <!--<p>-->
+        <!--<a href="#" class="worshipButton">-->
+            <!--<label style="color: #101010; font-weight: 100">Want to get involved with us?</label><br>-->
+            <!--<label>Serve <br> With <br> Us</label>-->
+        <!--</a>-->
+    <!--</p>-->
 </div>
 </div>
