--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -3,6 +3,8 @@
     padding:0;
 }
 
+html, body, #background { min-height: 100vh; min-width: 100vw; background-color:#FFFFFF;}
+
 body{
     font:15px/1.3 'Open Sans', sans-serif;
     text-align:center;
@@ -47,12 +49,10 @@ section, footer, header, aside, nav{
 }
 
 p b{
-    color:#ffffff;
+    color: #4b4f49;
     display:inline-block;
     padding:5px 10px;
-    background-color:#c4d7e0;
     border-radius:2px;
-    text-transform:uppercase;
     font-size:18px;
 }
 
