--- a/view/contact.html
+++ b/view/contact.html
@@ -1,11 +1,50 @@
-<div>
-    <div>
-        <p style="text-align: right">
-            We are here
-        </p>
+<div style=" text-align: left">
+    <div flex style=" border-bottom: solid #4b4f49;">
+        <table>
+            <tr>
+                <td><h2>Contact Us</h2></td>
+                <td align="right"><img src="../img/contact_2.png" style="vertical-align:text-bottom"></td>
+            </tr>
+        </table>
     </div>
-    <div>
-        <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d621.3232453415965!2d-0.028855470785451757!3d51.47113493411288!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4876025f3e830817%3A0x592ddcceacba384!2s22+Lucas+St%2C+London+SE8+4QG!5e0!3m2!1sen!2suk!4v1473449094069" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>-->
-        <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d621.3232453415965!2d-0.028855470785451757!3d51.47113493411288!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4876025f3e830817%3A0x592ddcceacba384!2s22+Lucas+St%2C+London+SE8+4QG!5e0!3m2!1sen!2suk!4v1473449094069" width="990" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>-->
+    <div flex style="padding: 2%">We'd like to hear from you</div>
+
+   <div flex>
+       <form class="form-horizontal">
+           <legend>You can contact us using the form below:</legend>
+           <div class="form-group">
+               <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+               <div class="col-sm-10">
+                   <input type="email" class="form-control" id="inputEmail3" placeholder="Email" required>
+               </div>
+           </div>
+           <div class="form-group">
+               <label for="inputName" class="col-sm-2 control-label">Name</label>
+               <div class="col-sm-10">
+                   <input type="text" class="form-control" id="inputName" placeholder="Name" required>
+               </div>
+           </div>
+           <div class="form-group">
+               <label for="inputMessage" class="col-sm-2 control-label"></label>
+               <div class="col-sm-10">
+                   <textarea class="form-control" rows="5" id="inputMessage" placeholder="Message" required></textarea>
+               </div>
+           </div>
+
+           <div class="form-group">
+               <div class="col-sm-offset-2 col-sm-10">
+                   <button type="submit" class="btn btn-default">Submit</button>
+               </div>
+           </div>
+       </form>
+   </div>
+
+    <div flex style="padding: 2%; text-align: left">
+        <table>
+            <tr>
+                <td><b>Telephone:</b> 07906065163</td>
+                <td colspan="2"><b>Email:</b>  admin@lewishamchurchofchrist.co.uk</td>
+            </tr>
+        </table>
     </div>
 </div>
