--- a/view/template/left-view-column.html
+++ b/view/template/left-view-column.html
@@ -1,6 +1,6 @@
 <div layout="column">
-    <div flex>
-        <table class="table table-hover">
+    <div flex style="border: thin dotted">
+        <table style="margin:5%">
             <thead class="thead-inverse">
             <tr>
                 <td colspan="2" class="text-center"><b>Worship And class Times</b></td>
