--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -6,11 +6,21 @@
 html, body, #background { min-height: 100vh; min-width: 100vw; background-color:#FFFFFF;}
 
 body{
-    font:15px/1.3 'Open Sans', sans-serif;
+    font:160.5% "Helvetica Neue", Helvetica, Arial, sans-serif;
     text-align:center;
     background:#FFFFFF;
-    color:#000;
+    color: #343434;
 }
+
+p { color: #343434; font-family: 'Raleway',sans-serif; font-size: 18px; font-weight: 500; line-height: 25px; margin: 0 0 24px; color: dimgray }
+
+
+a { color: #c8c8c8; text-decoration: underline; }
+
+
+a:hover { color: #1c1c1c; text-decoration: underline; }
+
+
 
 a, a:visited {
     outline:none;
