--- a/view/about.html
+++ b/view/about.html
@@ -1,31 +1,37 @@
 <div layout="column">
     <div flex style="padding-bottom: 4%; border-bottom: solid #4b4f49; text-align: left">
         <h3>About us</h3>
-        <img src="../img/about-us-icon.png">
-        The church of Christ, as in the Bible, reached the Lewisham area in 1994. In line with the aim of our Lord and
+        <p> <img src="../img/about-us-icon.png">
+
+       The church of Christ, as in the Bible, reached the Lewisham area in 1994. In line with the aim of our Lord and
         Saviour Jesus Christ, it is for people who hunger and thirst for righteousness to meet together and serve God
         as described for the Christian Age in the Holy Bible.
-
+       </p>
+        <p>
         The Good News is when our Lord rose from the dead on the third day, He said that, "Repentance for the forgiveness
         of sins should be proclaimed in His name to all the nations, beginning from Jerusalem." His disciples in Lewisham
         are made up of different nationalities who are rejoicing because their names are recorded in heaven through obedience
         of the Good News. Please come and see.
+        </p>
     </div>
 
     <div flex style="padding: 4%; border-bottom: solid #4b4f49; text-align: left">
-        <h3>Why the church of Christ</h3>
-        <img src="../img/why_us.jpeg">
+        <h3>Why we are called the church of Christ</h3>
+        <p><img src="../img/why_us.jpeg">
         The Biblical term "Church of Christ" is used to describe exactly who we are and who we belong to, namely Christ.
         This Divine name was first used by the Saviour Himself, when He said, "Upon this rock I will build my Church",
         Matthew 16:18 & Romans 16:16. Our aim is to follow the Divine instructions of our Lord, and to make disciples of
         every nation.
+        </p>
     </div>
     <div flex style="padding: 4%; text-align: left">
         <h3>You are welcome to visit us</h3>
-        <img src="../img/welcome.png">
-        If for any reason you visit the south east of London, there are great tourist attractions on our door step.
-        There are many places you may visit such as Greenwich park, the area where the Olympics will be held and where
-        time was first measured. Every one is warmly welcome.
+        <p><img src="../img/welcome.png">
+            Psalm 34:8 "Taste and see that the LORD is good; blessed is the one who takes refuge in him".
+            Everybody is welcome to fellowship with us. We are one family of God, where everyone join to worship as one. If
+            you happen to be in the area or you are one who hungers or thirst for the divine word of God, you are very much welcome
+            to join us for worship.
+        </p>
     </div>
 </div>
 
