--- a/view/contact.html
+++ b/view/contact.html
@@ -7,11 +7,11 @@
             </tr>
         </table>
     </div>
-    <div flex style="padding: 2%">We'd like to hear from you</div>
+    <div flex style="margin: 2%">We'd like to hear from you</div>
 
    <div flex>
-       <form class="form-horizontal">
-           <legend>You can contact us using the form below:</legend>
+       <form action="../php/barry.php" method="POST" role="form" class="form-horizontal">
+           <legend style="color: #5e5e5e">You can contact us using the form below:</legend>
            <div class="form-group">
                <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
                <div class="col-sm-10">
@@ -39,12 +39,23 @@
        </form>
    </div>
 
-    <div flex style="padding: 2%; text-align: left">
+    <div flex style="border: thin dotted; margin-top: 3%">
         <table>
+            <thead class="thead-inverse">
             <tr>
-                <td><b>Telephone:</b> 07906065163</td>
-                <td colspan="2"><b>Email:</b>  admin@lewishamchurchofchrist.co.uk</td>
+                <td colspan="2" class="text-center"><h3 style="text-align: left; color: #5e5e5e">Alternatively you can reach us by phone or email</h3></td>
             </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td><b>Telephone:</b></td>
+                <td>07906065163</td>
+            </tr>
+            <tr>
+                <td><b>Email:</b></td>
+                <td> admin@lewishamchurchofchrist.co.uk</td>
+            </tr>
+            </tbody>
         </table>
     </div>
 </div>
