--- a/view/home.html
+++ b/view/home.html
@@ -3,11 +3,14 @@
             <p class="normal">
             <b>"Salvation comes through a cross and a crucified Jesus."</b>
             </p>
-            <p class=normal>
+            <p>
                 We are a warm group of Christians who are striving to worship God in the same way that the first century
                 Christians did.
-                <p>
-            In this way we are striving to continue the divine unity that Jesus prayed for (John 17v 21). The church of Christ has congregations throughout the United Kingdom and all over the world. However we have no central organization on earth, but we have a common cause: to be the Church as it was when first instituted by the Lord Jesus Christ.
+                <p>In this way we are striving to continue the divine unity that Jesus prayed for (John 17v 21).
+            The church of Christ has congregations throughout the United Kingdom and all over the world. However we
+            have no central organization on earth, but we have a common cause: to be the Church as it was when first
+            instituted by the Lord Jesus Christ.
+            </p>
 
         </p>
         </div>
