--- a/view/contact.html
+++ b/view/contact.html
@@ -10,24 +10,24 @@
     <div flex style="margin: 2%">We'd like to hear from you</div>
 
    <div flex>
-       <form action="../php/barry.php" method="POST" role="form" class="form-horizontal">
+       <form action="../php/mail_sender.php" method="POST" role="form" class="form-horizontal">
            <legend style="color: #5e5e5e">You can contact us using the form below:</legend>
            <div class="form-group">
                <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
                <div class="col-sm-10">
-                   <input type="email" class="form-control" id="inputEmail3" placeholder="Email" required>
+                   <input type="email" class="form-control" id="inputEmail3" name="email-address" placeholder="Email" required>
                </div>
            </div>
            <div class="form-group">
                <label for="inputName" class="col-sm-2 control-label">Name</label>
                <div class="col-sm-10">
-                   <input type="text" class="form-control" id="inputName" placeholder="Name" required>
+                   <input type="text" class="form-control" id="inputName" name="name" placeholder="Name" required>
                </div>
            </div>
            <div class="form-group">
                <label for="inputMessage" class="col-sm-2 control-label"></label>
                <div class="col-sm-10">
-                   <textarea class="form-control" rows="5" id="inputMessage" placeholder="Message" required></textarea>
+                   <textarea class="form-control" rows="5" id="inputMessage" name="message" placeholder="Message" required></textarea>
                </div>
            </div>
 
