--- a/view/about.html
+++ b/view/about.html
@@ -1,7 +1,7 @@
 <div layout="column">
     <div flex style="padding-bottom: 4%; border-bottom: solid #4b4f49; text-align: left">
         <h3>About us</h3>
-        <p> <img src="../img/about-us-icon.png">
+        <p> <img src="img/about-us-icon.png">
 
        The church of Christ, as in the Bible, reached the Lewisham area in 1994. In line with the aim of our Lord and
         Saviour Jesus Christ, it is for people who hunger and thirst for righteousness to meet together and serve God
@@ -17,7 +17,7 @@
 
     <div flex style="padding: 4%; border-bottom: solid #4b4f49; text-align: left">
         <h3>Why we are called the church of Christ</h3>
-        <p><img src="../img/why_us.jpeg">
+        <p><img src="img/why_us.jpeg">
         The Biblical term "Church of Christ" is used to describe exactly who we are and who we belong to, namely Christ.
         This Divine name was first used by the Saviour Himself, when He said, "Upon this rock I will build my Church",
         Matthew 16:18 & Romans 16:16. Our aim is to follow the Divine instructions of our Lord, and to make disciples of
@@ -26,7 +26,7 @@
     </div>
     <div flex style="padding: 4%; text-align: left">
         <h3>You are welcome to visit us</h3>
-        <p><img src="../img/welcome.png">
+        <p><img src="img/welcome.png">
             Psalm 34:8 "Taste and see that the LORD is good; blessed is the one who takes refuge in him".
             Everybody is welcome to fellowship with us. We are one family of God, where everyone join to worship as one. If
             you happen to be in the area or you are one who hungers or thirst for the divine word of God, you are very much welcome
