--- a/view/contact.html
+++ b/view/contact.html
@@ -3,14 +3,14 @@
         <table>
             <tr>
                 <td><h2>Contact Us</h2></td>
-                <td align="right"><img src="../img/contact_2.png" style="vertical-align:text-bottom"></td>
+                <td align="right"><img src="img/contact_2.png" style="vertical-align:text-bottom"></td>
             </tr>
         </table>
     </div>
     <div flex style="margin: 2%">We'd like to hear from you</div>
 
    <div flex>
-       <form action="../php/mail_sender.php" method="POST" role="form" class="form-horizontal">
+       <form action="php/mail_sender.php" method="POST" role="form" class="form-horizontal">
            <legend style="color: #5e5e5e">You can contact us using the form below:</legend>
            <div class="form-group">
                <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
