fixed layout problem. Now using bootstrap layout

--- a/view/about.html
+++ b/view/about.html
@@ -1,5 +1,5 @@
 <div layout="column">
-    <div flex style="padding-bottom: 4%; border-bottom: solid #4b4f49; text-align: left">
+    <div  style="padding-bottom: 4%; border-bottom: solid #4b4f49; text-align: left">
         <h3>About us</h3>
         <p> <img src="img/about-us-icon.png">
 
@@ -15,7 +15,7 @@
         </p>
     </div>
 
-    <div flex style="padding: 4%; border-bottom: solid #4b4f49; text-align: left">
+    <div  style="padding: 4%; border-bottom: solid #4b4f49; text-align: left">
         <h3>Why we are called the church of Christ</h3>
         <p><img src="img/why_us.jpeg">
         The Biblical term "Church of Christ" is used to describe exactly who we are and who we belong to, namely Christ.
@@ -24,7 +24,7 @@
         every nation.
         </p>
     </div>
-    <div flex style="padding: 4%; text-align: left">
+    <div  style="padding: 4%; text-align: left">
         <h3>You are welcome to visit us</h3>
         <p><img src="img/welcome.png">
             Psalm 34:8 "Taste and see that the LORD is good; blessed is the one who takes refuge in him".
