--- a/view/contact.html
+++ b/view/contact.html
@@ -1,5 +1,5 @@
 <div style=" text-align: left">
-    <div flex style=" border-bottom: solid #4b4f49;">
+    <div  style=" border-bottom: solid #4b4f49;">
         <table>
             <tr>
                 <td><h2>Contact Us</h2></td>
@@ -7,9 +7,9 @@
             </tr>
         </table>
     </div>
-    <div flex style="margin: 2%">We'd like to hear from you</div>
+    <div  style="margin: 2%">We'd like to hear from you</div>
 
-   <div flex>
+   <div >
        <form action="php/mail_sender.php" method="POST" role="form" class="form-horizontal">
            <legend style="color: #5e5e5e">You can contact us using the form below:</legend>
            <div class="form-group">
@@ -39,7 +39,7 @@
        </form>
    </div>
 
-    <div flex style="border: thin dotted; margin-top: 3%">
+    <div  style="border: thin dotted; margin-top: 3%">
         <table>
             <thead class="thead-inverse">
             <tr>
