--- a/view/home.html
+++ b/view/home.html
@@ -1,4 +1,4 @@
-<div flex>
+<div >
         <div style="text-align: left">
             <p class="normal">
             <b>"Salvation comes through a cross and a crucified Jesus."</b>
@@ -15,7 +15,7 @@
         </p>
         </div>
 </div>
-<div flex style="padding-top: 4%">
+<div  style="padding-top: 4%">
     <div style="text-align: center">
         <div uib-carousel active="active" interval="myInterval" no-wrap="noWrapSlides">
             <div uib-slide ng-repeat="slide in slides track by slide.id" index="slide.id">
@@ -31,7 +31,7 @@
 
 <div layout="row" style="padding-top: 4%">
 
-    <div flex style="border-bottom: solid #4b4f49; text-align: left">
+    <div  style="border-bottom: solid #4b4f49; text-align: left">
         <h3>God's Word For The Week</h3>
     </div>
 </div>
