--- a/view/template/menu-template.html
+++ b/view/template/menu-template.html
@@ -1,17 +1,16 @@
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation" id="navBar">
+    <div class="container">
 <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
     </button>
+    <a class="navbar-brand" href="#!/home" ng-click="active='home'"  style="color: #ffffff"><label>Lewisham Church of christ</label></a>
 </div>
-<div layout="row" class="navbar-collapse collapse">
-    <div layout="row">
-        <div flex="10"></div>
-        <div flex="80">
-            <a class="navbar-brand" href="#"  style="color: #ffffff"><label>Lewisham Church of christ</label></a>
-            <ul class="nav navbar-nav" style="float: right; position: relative">
+<div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right">
                 <li ng-class="{active: url.path() == '/home' || url.path() == '/'}"><a href="#!/home" class="home" ng-click="active='home'"><strong>Home</strong></strong></a></li>
                 <li ng-class="{active: url.path() == '/about'}"><a href="#!/about" class="about " ng-click="active='about'"><strong>About</strong></a></li>
                 <li ng-class="{active: url.path() == '/resources'}"><a href="#!/resources" class="resources" ng-click="active='resources'"><strong>Resources</strong></a></li>
@@ -48,6 +47,5 @@
             </ul>
 
         </div>
-        <div flex="10"></div>
-    </div>
-</div>
+    </div><!--div container -->
+</nav>
