Fixed styling issues

--- a/view/resources.html
+++ b/view/resources.html
@@ -38,19 +38,10 @@
 </div>
 
 <div>
-    <table class="table table-hover">
-        <thead class="thead-inverse">
-        <tr>
-            <td colspan="2" class="text-center"><h3 style="text-align: left; color: #5e5e5e">Videos</h3></td>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td style="text-align: left; border: none"><iframe width="560" height="315" src="https://www.youtube.com/embed/zSIp1qFqdZ4" frameborder="0" allowfullscreen></iframe></td>
-        </tr>
-        <tr>
-            <td><iframe width="560" height="315" src="https://www.youtube.com/embed/htJJNaVCXRY" frameborder="0" allowfullscreen></iframe></td>
-        </tr>
-        </tbody>
-    </table>
+    <div>
+        <iframe width="100%" height="315" src="https://www.youtube.com/embed/zSIp1qFqdZ4" frameborder="0" allowfullscreen></iframe>
+    </div>
+    <div>
+        <iframe width="100%" height="315" src="https://www.youtube.com/embed/htJJNaVCXRY" frameborder="0" allowfullscreen></iframe>
+    </div>
 </div>
