Improved db code

--- a/view/home.html
+++ b/view/home.html
@@ -37,9 +37,8 @@
     <div>
         <table class="thead-inverse">
             <tr ng-repeat="m in messages">
-                <td>{{m}}</td>
-                <!--<td>{{m.date}}</td>-->
-                <!--<td>{{m.link}}</td>-->
+                <td>{{m.id}}</td>
+                <td>{{m.street}}</td>
             </tr>
         </table>
     </div>
